<resources>
    <string name="app_name">Project</string>
    <string name="hello">Hello</string>
    <string name="notFocusedLabel">Not Focused on the App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_first_fragment">Hello First fragment</string>
    <string name="hello_second_fragment">Hello Second fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_activity_name">First Activity</string>
    <string name="next_activity_name">Next Activity</string>
    <string name="second_activity_fragment_1_name">Second Activity Fragment 1</string>
    <string name="name_edit_text">Name</string>
    <string name="go_back_name">Go Back</string>
    <string name="go_to_fragment_1_button">Go to fragment 1</string>
    <string name="age_hint_name">Enter Index</string>
    <string name="second_activity_fragment_2_name">Second Activity Fragment 2</string>
</resources>
